cleaned up text in content sections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>mattconforti.com - Home</title>
+        <title>Matt Conforti - About Me</title>
         <link rel="stylesheet" href="home_style.css">
     </head>
     <body>
@@ -17,7 +17,7 @@
                         <a href="#aboutSection">About</a>
                     </div>
                     <div>
-                        <a href="#skillsServicesSection">Skills & Services</a>
+                        <a href="#technicalSkillsSection">Technical Skills</a>
                     </div>
                     <div>
                         <a href="#projectsSection">Projects</a>
@@ -33,12 +33,12 @@
         <div id="contents">
             <div id="firstContentSection" class="contentSection">
                 <h2 id="introSection">Intro</h2>
-                <p>Hello there! My name is Matt Conforti. Welcome to my home-page! 
-                    <br><br>On this page, you can learn a bit about me, what I do,
-                    and see some of the work I've done over my still-young career.<br>Don't
+                <p>Hello there! My name is Matt Conforti. Welcome to my 'about-me' page! 
+                    <br><br>On this page, you can learn a bit about myself, what I do,
+                    and see some of the work I've done.<br>Don't
                     be shy to reach out to me with questions or inquiries of any kind.
                     My contact info can be found below at the very bottom of the page.
-                    <br><br>Thanks for visiting mattconforti.com!
+                    <br><br>Thanks for visiting my site!
                 </p>
             </div>
             <div class="contentSection">
@@ -53,22 +53,22 @@
                     Coding is not just a hobby, or something to pay the bills,
                     it is my lifestyle. 
                 </p>
-                <p>Nowadays, I am self-teaching C# whilst solidifying and
-                    supplementing the foundation of knowledge I have
-                    gained over my computing career.<br>I enjoy spending my 
+                <p>Nowadays, I am self-teaching C# and solidifying the knowledge I have
+                    gained over my still-young computing career.<br>I enjoy spending my 
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
                     activities that keep my mind and body sharp (as shown in the
                     'Hobbies' section).
                 </p>
-                <p>If you wish to contact me for more information about myself or the 
-                    skillset I have to offer, please send me an email at 
-                    mattconforti21@gmail.com,<br>and I will be sure to respond as soon 
-                    as possible.<br><br>Thanks again for stopping by, and have a good one!
+                <p>I have recently started a Youtube channel, which can be found at ______________________.<br>
+                    Here, you can view coding tutorials for a variety of programming languages such as Python, C++, C#,
+                    Java, and more.<br> If you want to learn coding or are looking to expand your programming skillset, this
+                    channel will give you a jumpstart towards success.<br>The languages which will be covered on the channel can 
+                    be seen below.
                 </p>
             </div>
             <div class="contentSection">
-                    <h2 id="skillsServicesSection">Skills & Services</h2>
+                    <h2 id="technicalSkillsSection">Technical Skills</h2>
                     <ul>
                         <li>C/C++/C#</li>
                         <li>Python</li>
