rid of hobbies section and un-used text

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
                         <a href="#projectsSection">Projects</a>
                     </div>
                     <div>
-                        <a href="#hobbiesSection">Hobbies</a>
-                    </div>
-                    <div>
                         <a href="#contactMeSection">Contact Me</a>
                     </div>
                 </div>
@@ -34,7 +31,8 @@
             <div id="firstContentSection" class="contentSection">
                 <h2 id="introSection">Intro</h2>
                 <p>Hello there! My name is Matt Conforti. Welcome to my 'about-me' page! 
-                    <br><br>On this page, you can learn a bit about myself, what I do,
+                    This is a page designed solely using HTML and CSS.
+                    <br><br>Here, you can learn a bit about me, what I do,
                     and see some of the work I've done.<br>Don't
                     be shy to reach out to me with questions or inquiries of any kind.
                     My contact info can be found below at the very bottom of the page.
@@ -44,9 +42,9 @@
             <div class="contentSection">
                 <h2 id="aboutSection">About</h2>
                 <p>I am a 22 year old 
-                    programmer currently based out of Western New York.<br>
+                    programmer currently based out of Royal Oak, Michigan.<br>
                     My passion for Computer Science was bred at 
-                    Canisius College, where I recieved my Bachelor of Science
+                    Canisius College in Buffalo, New York. There, I recieved my Bachelor of Science
                     Degree for CS,<br>as well as the Computer Science Department 
                     Excellence in Academics Award. Although my college career
                     is over,<br>I continue to learn and better myself every day.
@@ -57,14 +55,11 @@
                     gained over my still-young computing career.<br>I enjoy spending my 
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
-                    activities that keep my mind and body sharp (as shown in the
-                    'Hobbies' section).
-                </p>
-                <p>I have recently started a Youtube channel, which can be found at ______________________.<br>
-                    Here, you can view coding tutorials for a variety of programming languages such as Python, C++, C#,
-                    Java, and more.<br> If you want to learn coding or are looking to expand your programming skillset, this
-                    channel will give you a jumpstart towards success.<br>The languages which will be covered on the channel can 
-                    be seen below.
+                    activities that keep my mind and body sharp.<br>These include weight 
+                    training, strategy games, videogames, basktball, brainteasers etc.
+                    I believe it is important to have many hobbies, but I am most passionate
+                    about computing and the creative nature of writing code using a programming
+                    language.
                 </p>
             </div>
             <div class="contentSection">
@@ -94,57 +89,6 @@
                         <a href="https://github.com/mattconforti" target="_blank"
                            style="color:white;">github.com/mattconforti</a>.
                     </p>
-            </div>
-            <div class="contentSection">
-                    <h2 id="hobbiesSection">Hobbies</h2>
-                    <p>Click on a Hobby to learn more.</p>
-                    <button id="sportsButton">Sports</button>
-                    <button id="fitnessButton">Fitness</button>
-                    <button id="gamesButton">Games</button>
-                    <!--
-                    <p>Besides computing, my passions are sports, fitness, and strategy based games/activities.<br><br>
-                    Basketball is by far my favorite sport, and I am an avid New York Knicks fan.<br>Despite the 
-                    jokes and memes, the Knickerbockers will always be my team. I'll always support them, no matter 
-                    the Win/Loss record.<br><br>I've played organized Basketball in a youth league and middle school,
-                    as well as Baseball from Tee-ball to HS Varsity. I used to watch the New York Yankees when I was 
-                    younger, but haven't since my playing days have been over. I still play basketball with
-                    friends though, to this day.<br><br>
-
-                    My fitness journey began super late compared to most of my peers.<br> While most of the kids I was
-                    friends with in Middle School/High School played football and therefore actively did strength training, I did
-                    nothing of the sort.<br>I took a core-based fitness class my sophmore year of High School, but was 
-                    not really into working-out and sort of just went through the motions in class.<br>One day, 
-                    fairly out of the blue, I decided I wanted to learn how to do pushups properly, and not just
-                    jerk my body up and down like I had previously done (LOL). So, I worked my way up from my then
-                    max 3 pushups to a whole 5 pushups. And then from 5 to 7, and from 7 to 10, and from 10 to 15,
-                    15 to 20, etc. Weeks later, people in my family started to notice my skinny little frame adding
-                    some thickness to it, and made comments. From there, I was hooked. I liked that I was feeling 
-                    accomplished and healthy, and I enjoyed the fact that I could be in control of how I looked.<br>
-                    I started to get more serious and I did some research on home dumbell workouts, and it took off
-                    from there. I began to learn about different muscle groups and how to use them, and I really started
-                    noticing jumps in strength. Around this time, I also started getting more serious about my diet. I've
-                    had a fairly healthy diet all my life, but I never knew how much food impacted day to day affairs
-                    within the body. I had tried veganism before, and lost too much weight. But, it gave me the ability
-                    to learn how to make my own meals, which is a HUGE step in being healthy. From then on, I started
-                    eating a lot leaner, cutting out dairy, watching what vitamins and nutrients I was taking in, and what I
-                    was lacking. This all contributed to my overall health and fitness. I started my journey at 140 lbs 
-                    and now I'm around 190, with very little fat gained. It has taken me about 5 years to really develop a
-                    strong mind-muscle connection, and be in touch with my body and adhere to its wants and needs. Remember, 
-                    train the body, train the mind! Those are the keys to a healthy, successful lifestyle.
-                    <br><br>
-
-                    As far as videogames, board games, etc. I enjoy anything that allows players to use skill and strategy.
-                    This type of game really appeals to me because it allows players to use skill, their brains, past
-                    experiences etc. (and not just rely on pure luck) to gain an advantage on opposing players. There are 
-                    seldom flukes or upsets, and the outcome is based on the people involved, not predetermined or decided by some
-                    arbitrary factor (like the roll of a dice). Games like Checkers, Scrabble, war games, Poker, etc. are all 
-                    great examples of games that require skill and stragey over luck and chance.<br><br>
-
-                    I also really enjoy spending time with family and friends. I believe a large part of who you are stems
-                    from the people who you surround yourself with.<br>That being said, I always try to be around 
-                    good energy and genuine people, and it seldom results in having bad times.
-                    </p>
-                    -->
             </div>
             <div id="contactDiv" class="contentSection">
                     <h2 id="contactMeSection">Contact Me</h2>
