--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <img src="matt_profile.jpg" alt="Matt Conforti Profile Picture">
+            <img id="profileImg" src="matt_profile.jpg" alt="Matt Conforti Profile Picture">
             <h1>Matthew Ryan Conforti</h1>
             <div id="menubar">
                     <div>
@@ -30,7 +30,7 @@
         <div id="contents">
             <div id="firstContentSection" class="contentSection">
                 <h2 id="introSection">Intro</h2>
-                <p>Hello there! My name is Matt Conforti. Welcome to my 'about-me' page! 
+                <p>Hello there! My name is Matt Conforti. Welcome to my 'about-me' page!<br> 
                     This is a page designed solely using HTML and CSS.
                     <br><br>Here, you can learn a bit about me, what I do,
                     and see some of the work I've done.<br>Don't
@@ -55,11 +55,11 @@
                     gained over my still-young computing career.<br>I enjoy spending my 
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
-                    activities that keep my mind and body sharp.<br>These include weight 
-                    training, strategy games, videogames, basktball, brainteasers etc.
+                    activities that keep my mind and body sharp. These include weight 
+                    training, strategy games, videogames, basktball, brainteasers etc.<br>
                     I believe it is important to have many hobbies, but I am most passionate
-                    about computing and the creative nature of writing code using a programming
-                    language.
+                    about computing and the creative nature of writing code using a <br>
+                    programming language.
                 </p>
             </div>
             <div class="contentSection">
@@ -82,9 +82,27 @@
             </div>
             <div class="contentSection">
                     <h2 id="projectsSection">Projects</h2>
-                    <p>Amongst many older projects, these are some of the newer things I've 
-                        been working on.</p>
+                    <p>Amongst a mix of new and old projects,<br> these are some of the things I've particularly 
+                        enjoyed working on:<br><br>
 
+                        <u>mattsAtm</u> - an ATM simulator using C#<br>
+                        <img class="projectImg" src="mattsAtmWelcome.png" alt="mattsAtm home screen">
+                        <img class="projectImg" src="mattsAtmRegister.png" alt="mattsAtm registration">
+                        <img class="projectImg" src="mattsAtmTransactions.png" alt="mattsAtm transaction history">
+                        <br><br>
+
+                        <u>mindSave</u> - Python program to save speech-to-text into a database<br><br>
+                        <img class="projectImg" src="mindSave1.jpg" alt="mindSave speech-to-text">
+                        <img class="projectImg" src="mindSave2.jpg" alt="mindSave speech-to-text2">
+                        <img class="projectImg" src="mindSave3.jpg" alt="mindSave output">
+                        <br><br>
+
+                        <u>codeDisplay</u> - web-page to display code with a clean and simple look<br><br>
+                        <img class="projectImg" src="codeDisplay1.png" alt="codeDisplay example1">
+                        <img class="projectImg" src="codeDisplay2.png" alt="codeDisplay example2">
+                        <br><br>
+
+                    </p>
                     <p>You can find source code to public projects at
                         <a href="https://github.com/mattconforti" target="_blank"
                            style="color:white;">github.com/mattconforti</a>.
