fixed line spacing issues

--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
                     <p>Amongst a mix of new and old projects,<br> these are some of the things I've particularly 
                         enjoyed working on:<br><br>
 
-                        <u>mattsAtm</u> - an ATM simulator using C#<br>
+                        <u>mattsAtm</u> - an ATM simulator using C#<br><br>
                         <img class="projectImg" src="mattsAtmWelcome.png" alt="mattsAtm home screen">
                         <img class="projectImg" src="mattsAtmRegister.png" alt="mattsAtm registration">
                         <img class="projectImg" src="mattsAtmTransactions.png" alt="mattsAtm transaction history">
-                        <br><br>
+                        <br><br><br>
 
                         <u>mindSave</u> - Python program to save speech-to-text into a database<br><br>
                         <img class="projectImg" src="mindSave1.jpg" alt="mindSave speech-to-text">
                         <img class="projectImg" src="mindSave2.jpg" alt="mindSave speech-to-text2">
                         <img class="projectImg" src="mindSave3.jpg" alt="mindSave output">
-                        <br><br>
+                        <br><br><br>
 
                         <u>codeDisplay</u> - web-page to display code with a clean and simple look<br><br>
                         <img class="projectImg" src="codeDisplay1.png" alt="codeDisplay example1">
                         <img class="projectImg" src="codeDisplay2.png" alt="codeDisplay example2">
-                        <br><br>
+                        <br><br><br>
 
                     </p>
                     <p>You can find source code to public projects at
