swapped a few photos and fixed spacing

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
                     activities that keep my mind and body sharp. These include weight 
-                    training, strategy games, videogames, basktball, brainteasers etc.<br>
+                    training, strategy games, videogames, basketball, brainteasers etc.<br>
                     I believe it is important to have many hobbies, but I am most passionate
                     about computing and the creative nature of writing code using a <br>
                     programming language.
