fixed text content and header spacing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     This is a page designed solely using HTML and CSS.
                     <br><br>Here, you can learn a bit about me, what I do,
                     and see some of the work I've done.<br>Don't
-                    be shy to reach out to me with questions or inquiries of any kind.
+                    hesitate to reach out to me with questions or inquiries of any kind.<br>
                     My contact info can be found below at the very bottom of the page.
                     <br><br>Thanks for visiting my site!
                 </p>
@@ -44,22 +44,22 @@
                 <p>I am a 22 year old 
                     programmer currently based out of Royal Oak, Michigan.<br>
                     My passion for Computer Science was bred at 
-                    Canisius College in Buffalo, New York. There, I recieved my Bachelor of Science
-                    Degree for CS,<br>as well as the Computer Science Department 
-                    Excellence in Academics Award. Although my college career
-                    is over,<br>I continue to learn and better myself every day.
-                    Coding is not just a hobby, or something to pay the bills,
-                    it is my lifestyle. 
+                    Canisius College in Buffalo, New York.<br>There, I recieved my Bachelor of Science
+                    Degree for CS, as well as the Computer Science Department 
+                    Excellence in Academics Award.<br><br>Although my undergraduate studies have concluded,
+                    I constantly continue to learn and better myself.<br>
+                    I strive to enhance my computer skills and improve myself as a person day after day.<br>
+                    Computer programming is not just a hobby of mine or something to pay the bills,
+                    it is a part of me and my lifestyle. 
                 </p>
                 <p>Nowadays, I am self-teaching C# and solidifying the knowledge I have
                     gained over my still-young computing career.<br>I enjoy spending my 
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
-                    activities that keep my mind and body sharp. These include weight 
-                    training, strategy games, videogames, basketball, brainteasers etc.<br>
-                    I believe it is important to have many hobbies, but I am most passionate
-                    about computing and the creative nature of writing code using a <br>
-                    programming language.
+                    activities that keep my mind and body sharp.<br>These include weight 
+                    training, strategy games, videogames, basketball, brainteasers, etc.
+                    I believe it is important to have many hobbies,<br>but I am most passionate
+                    about computing and the creative nature of writing code using a programming language.
                 </p>
             </div>
             <div class="contentSection">
