fixed spacing when viewing on mobile

--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
     </head>
     <body>
         <div id="header">
-            <img id="profileImg" src="matt_profile.jpg" alt="Matt Conforti Profile Picture">
-            <h1>Matthew Ryan Conforti</h1>
+            <div id="profileSection">
+                <img id="profileImg" src="matt_profile.jpg" alt="Matt Conforti Profile Picture">
+                <h1>Matthew Ryan Conforti - About Me</h1>
+            </div>
             <div id="menubar">
-                    <div>
-                        <a href="#introSection">Intro</a>
-                    </div>
-                    <div>
-                        <a href="#aboutSection">About</a>
-                    </div>
-                    <div>
-                        <a href="#technicalSkillsSection">Technical Skills</a>
-                    </div>
-                    <div>
-                        <a href="#projectsSection">Projects</a>
-                    </div>
-                    <div>
-                        <a href="#contactMeSection">Contact Me</a>
-                    </div>
+                <div>
+                    <a href="#introSection">Intro</a>
                 </div>
+                <div>
+                    <a href="#aboutSection">About</a>
+                </div>
+                <div>
+                    <a href="#technicalSkillsSection">Technical Skills</a>
+                </div>
+                <div>
+                    <a href="#projectsSection">Projects</a>
+                </div>
+                <div>
+                        <a href="#contactMeSection">Contact Me</a>
+                </div>
+            </div>
         </div>
         <div id="contents">
             <div id="firstContentSection" class="contentSection">
