--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="header">
             <div id="profileSection">
                 <img id="profileImg" src="matt_profile.jpg" alt="Matt Conforti Profile Picture">
-                <h1>Matthew Ryan Conforti - About Me</h1>
+                <h1>Matthew Ryan Conforti</h1>
             </div>
             <div id="menubar">
                 <div>
