added content to about section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
                     I believe it is important to have many hobbies,<br>but I am most passionate
                     about computing and the creative nature of writing code using a programming language.
                 </p>
+                <p>This past summer, I started a personal Computer Science blog on Instagram,<br>
+                   which can be found at <a href="https://instagram.com/comp_21" target="_blank"
+                   style="color:white;">instagram.com/comp_21</a>.</p>
+
+                <p>More recently however, I have started a YouTube channel, called
+                    <a href="https://www.youtube.com/channel/UCBKp2r-7qzeYj6-s5o03NVg/" target="_blank"
+                    style="color:white;"> comp_21_YT</a>.<br>
+                    Here, I will post bi-weekly coding videos and tutorials.<br>
+                    Please click the <a href="https://www.youtube.com/channel/UCBKp2r-7qzeYj6-s5o03NVg/" target="_blank"
+                    style="color:white;"> link</a> if you are interested! Thanks for taking the time.
+                </p>
             </div>
             <div class="contentSection">
                     <h2 id="technicalSkillsSection">Technical Skills</h2>
@@ -113,9 +124,9 @@
             <div id="contactDiv" class="contentSection">
                     <h2 id="contactMeSection">Contact Me</h2>
                     <ul>
+                        <li><u>HOURS</u>: Best time to reach me is 7am-7pm.</li>
                         <li><u>EMAIL</u>: mattconforti21@gmail.com</li>
                         <li><u>INSTAGRAM</u>: @comp_21</li>
-                        <li><u>HOURS</u>: Best time to reach me is weekdays 7am-7pm.</li>
                     </ul>
             </div>
         </div>
