minor style and content fixes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2 id="introSection">Intro</h2>
                 <p>Hello there! My name is Matt Conforti. Welcome to my 'about-me' page!<br> 
                     This is a page designed solely using HTML and CSS.
-                    <br><br>Here, you can learn a bit about me, what I do,
+                    <br><br>Here, you can learn a bit about me, what I do,<br>
                     and see some of the work I've done.<br>Don't
                     hesitate to reach out to me with questions or inquiries of any kind.<br>
                     My contact info can be found below at the very bottom of the page.
@@ -45,13 +45,13 @@
                 <h2 id="aboutSection">About</h2>
                 <p>I am a 22 year old 
                     programmer currently based out of Royal Oak, Michigan.<br>
-                    My passion for Computer Science was bred at 
+                    My passion for Computer Science was bred at<br> 
                     Canisius College in Buffalo, New York.<br>There, I recieved my Bachelor of Science
-                    Degree for CS, as well as the Computer Science Department 
-                    Excellence in Academics Award.<br><br>Although my undergraduate studies have concluded,
+                    Degree for CS,<br> as well as the Computer Science Department 
+                    Excellence in Academics Award.<br><br>Although my undergraduate studies have concluded,<br>
                     I constantly continue to learn and better myself.<br>
-                    I strive to enhance my computer skills and improve myself as a person day after day.<br>
-                    Computer programming is not just a hobby of mine or something to pay the bills,
+                    I strive to enhance my computer skills<br> and improve myself as a person day after day.<br>
+                    Computer programming is not just a hobby of mine or something to pay the bills,<br>
                     it is a part of me and my lifestyle. 
                 </p>
                 <p>Nowadays, I am self-teaching C# and solidifying the knowledge I have
@@ -59,12 +59,12 @@
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
                     activities that keep my mind and body sharp.<br>These include weight 
-                    training, strategy games, videogames, basketball, brainteasers, etc.
-                    I believe it is important to have many hobbies,<br>but I am most passionate
+                    training, strategy games, videogames, basketball, brainteasers, etc.<br>
+                    Although I believe it is important to have many hobbies,<br>I am most passionate
                     about computing and the creative nature of writing code using a programming language.
                 </p>
                 <p>This past summer, I started a personal Computer Science blog on Instagram,<br>
-                   which can be found at <a href="https://instagram.com/comp_21" target="_blank"
+                   which can be found at <a href="https://instagram.com/comp_21/" target="_blank"
                    style="color:white;">instagram.com/comp_21</a>.</p>
 
                 <p>More recently however, I have started a YouTube channel, called
@@ -123,11 +123,13 @@
             </div>
             <div id="contactDiv" class="contentSection">
                     <h2 id="contactMeSection">Contact Me</h2>
-                    <ul>
-                        <li><u>HOURS</u>: Best time to reach me is 7am-7pm.</li>
-                        <li><u>EMAIL</u>: mattconforti21@gmail.com</li>
-                        <li><u>INSTAGRAM</u>: @comp_21</li>
-                    </ul>
+                        <div><u>HOURS</u>: Best time to reach me: 7am-7pm.</div><br>
+                        <div><u>EMAIL</u>: mattconforti21@gmail.com / comptwentyone@gmail.com</div><br>
+                        <div><u>YOUTUBE</u>: <a href="https://www.youtube.com/channel/UCBKp2r-7qzeYj6-s5o03NVg/" target="_blank"
+                            style="color:white;"> comp_21_YT</a></div><br>
+                        <div><u>INSTAGRAM</u>: <a href="https://instagram.com/comp_21/" target="_blank"
+                            style="color:white;"> @comp_21</a></div><br>
+                        <div><u>LINKEDIN</u>: <a href="https://linkedin.com/in/matthew-conforti-">linkedin.com/in/matthew-conforti-</a></div><br>
             </div>
         </div>
         <div id="footer">
