--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             <div class="contentSection">
                 <h2 id="aboutSection">About</h2>
                 <p>I am a 22 year old 
-                    programmer currently based out of Royal Oak, Michigan.<br>
+                    programmer<br>currently based out of Royal Oak, Michigan.<br>
                     My passion for Computer Science was bred at<br> 
                     Canisius College in Buffalo, New York.<br>There, I recieved my Bachelor of Science
-                    Degree for CS,<br> as well as the Computer Science Department 
+                    Degree for CS,as well as <br>the Computer Science Department 
                     Excellence in Academics Award.<br><br>Although my undergraduate studies have concluded,<br>
                     I constantly continue to learn and better myself.<br>
                     I strive to enhance my computer skills<br> and improve myself as a person day after day.<br>
-                    Computer programming is not just a hobby of mine or something to pay the bills,<br>
+                    Computer programming is not just a hobby of mine or something to pay the bills,
                     it is a part of me and my lifestyle. 
                 </p>
                 <p>Nowadays, I am self-teaching C# and solidifying the knowledge I have
@@ -59,15 +59,15 @@
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
                     activities that keep my mind and body sharp.<br>These include weight 
-                    training, strategy games, videogames, basketball, brainteasers, etc.<br>
+                    training, strategy games,<br> videogames, basketball, brainteasers, etc.<br>
                     Although I believe it is important to have many hobbies,<br>I am most passionate
                     about computing and the creative nature of writing code using a programming language.
                 </p>
-                <p>This past summer, I started a personal Computer Science blog on Instagram,<br>
-                   which can be found at <a href="https://instagram.com/comp_21/" target="_blank"
+                <p>This past summer, I started a personal Computer Science blog on Instagram,
+                   which can be found at<br> <a href="https://instagram.com/comp_21/" target="_blank"
                    style="color:white;">instagram.com/comp_21</a>.</p>
 
-                <p>More recently however, I have started a YouTube channel, called
+                <p>More recently however, I have started a YouTube channel,<br> called
                     <a href="https://www.youtube.com/channel/UCBKp2r-7qzeYj6-s5o03NVg/" target="_blank"
                     style="color:white;"> comp_21_YT</a>.<br>
                     Here, I will post bi-weekly coding videos and tutorials.<br>
