--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
             <div class="contentSection">
                 <h2 id="aboutSection">About</h2>
                 <p>I am a 22 year old 
-                    programmer<br>currently based out of Royal Oak, Michigan.<br>
+                    programmer<br>based out of Long Island, New York.<br>
                     My passion for Computer Science was bred at<br> 
                     Canisius College in Buffalo, New York.<br>There, I recieved my Bachelor of Science
-                    Degree for CS,as well as <br>the Computer Science Department 
+                    Degree for CS, as well as <br>the Computer Science Department 
                     Excellence in Academics Award.<br><br>Although my undergraduate studies have concluded,<br>
                     I constantly continue to learn and better myself.<br>
                     I strive to enhance my computer skills<br> and improve myself as a person day after day.<br>
                     Computer programming is not just a hobby of mine or something to pay the bills,
                     it is a part of me and my lifestyle. 
                 </p>
-                <p>Nowadays, I am self-teaching C# and solidifying the knowledge I have
+                <p>Nowadays, I am self-teaching web development and solidifying the knowledge I have
                     gained over my still-young computing career.<br>I enjoy spending my 
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
