more content revisions

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     Computer programming is not just a hobby of mine or something to pay the bills,
                     it is a part of me and my lifestyle. 
                 </p>
-                <p>Nowadays, I am self-teaching web development and solidifying the knowledge I have
+                <p>Nowadays, I am self-teaching JavaScript and solidifying the knowledge I have
                     gained over my still-young computing career.<br>I enjoy spending my 
                     free time designing and implementing personal projects
                     (some of which you can see below),<br>as well as a host of other
@@ -85,6 +85,7 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>Javascript</li>
+                        <li>jQuery</li>
                         <li>CASM</li>
                         <li>Prolog</li>
                         <li>Lisp</li>
